--- a/.github/workflows/activity-box.yml
+++ b/.github/workflows/activity-box.yml
@@ -14,5 +14,5 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_USERNAME: JasonEtco
-          GIST_ID: 68c3458672047ec25e61a8af730181c3
+          GH_USERNAME: amy279
+          GIST_ID: f376637496db86a6fc5ac3e9efcf5010
